apps/lidarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app: lidarr

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: lidarr
          image: ghcr.io/home-operations/lidarr:3.1.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
            seccompProfile:
              type: "RuntimeDefault"
          readinessProbe:
            httpGet:
              path: /ping
              port: 8686
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 8686
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: lidarr-media-cover
              mountPath: /config/MediaCover
            - name: lidarr-media
              mountPath: /media
            - name: lidarr-seedbox
              mountPath: /downloads
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: lidarr-config
          emptyDir: {}
        - name: lidarr-media-cover
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: lidarr-media
          persistentVolumeClaim:
            claimName: lidarr-media-pvc
        - name: lidarr-seedbox
          persistentVolumeClaim:
            claimName: lidarr-seedbox-pvc
        - name: tmp
          emptyDir:
            sizeLimit: 512Mi
