apps/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - port: 80
      targetPort: 8686
