apps/lidarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-lan
  namespace: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.wevelsiep.com`)
      kind: Rule
      services:
        - name: lidarr
          port: 80
