apps/lidarr/cnp-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app-ingress
  namespace: lidarr
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
        - matchLabels:
            io.kubernetes.pod.namespace: houndarr
            app: houndarr
        - matchLabels:
            io.kubernetes.pod.namespace: prowlarr
            app: prowlarr
        - matchLabels:
            io.kubernetes.pod.namespace: unpackerr
            app: unpackerr
        - matchLabels:
            io.kubernetes.pod.namespace: needle
            app: needle
      toPorts:
        - ports:
            - port: "8686"
              protocol: TCP
